# CUPDAQ

./: .gitignore  CMakeLists.txt  README.md  amore_test.yml~  fadct.config  gpush.sh  gsync.sh  plot_event.py~  read_h5.py~  readconfig.C  test.C
.lh/: .gitignore.json
AMORE/: CMakeLists.txt
AMORE/AMORE/: amoreconsts.hh
AMOREAlgs/: CMakeLists.txt
AMOREAlgs/AMOREAlgs/: AMOREChunkFIFO.hh  ChunkDataFIFO.hh  LinkDef.h
AMOREAlgs/src/: AMOREChunkFIFO.cc  ChunkDataFIFO.cc
AMOREAlgs/test/: CMakeLists.txt  fifo_test.cc
AMOREDAQ/: CMakeLists.txt
AMOREDAQ/AMOREDAQ/: AMOREADC.hh  AMOREADCConf.hh  AMOREDAQManager.hh  AMORETCB.hh  LinkDef.h  daqopt.hh
AMOREDAQ/src/: AMOREADC.cc  AMOREADCConf.cc  AMOREDAQManager.cc  AMOREDAQManager_rc.cc  AMOREDAQManager_tfunc.cc  AMORETCB.cc  AMORETCBConf.cc  daqopt.cc
AMOREDAQ/test/: CMakeLists.txt  amoredaq.cc  amoretcb.cc
AMORESystem/: CMakeLists.txt
AMORESystem/AMORESystem/: AMOREADC.hh  AMOREADCConf.hh  AMORETCB.hh  AMORETCBConf.hh  LinkDef.h
AMORESystem/src/: AMOREADC.cc  AMOREADCConf.cc  AMORETCB.cc  AMORETCBConf.cc
DAQ/: CMakeLists.txt
DAQ/DAQ/: CupDAQManager.hh  CupGeneralTCB.hh  LinkDef.h  daqopt.hh
DAQ/config/: all.config  all.yml  amore.config  cosinetcb.config  fadcs.config  fadcs.yml  fadct.config  fadct.yml  gadcs.config  iadct.yml  madcs.config  madcs.yml  main.yml  sadct.config  sadct.yml  sub_daq.config  sub_daq.yml  sub_fadc.config  sub_fadc.yml  sub_iadc.yml  sub_sadc.yml  sub_tcb.yml  tcb_v2.config  tcb_v2.yml
DAQ/macro/: stddaq.C  tcbdaq.C
DAQ/scripts/: executedaq.sh  executenulldaq.sh
DAQ/src/: CMakeLists.txt  CupDAQManager.cc  CupDAQManager_build.cc  CupDAQManager_histogramer.cc  CupDAQManager_net.cc  CupDAQManager_nullrc.cc  CupDAQManager_rc.cc  CupDAQManager_read.cc  CupDAQManager_sort.cc  CupDAQManager_tfunc.cc  CupDAQManager_utils.cc  CupDAQManager_write.cc  CupDAQManager_write_gzip.cc  CupDAQManager_write_hdf5.cc  CupDAQManager_write_root.cc  CupGeneralTCB.cc  daqopt.cc
DAQ/test/: CMakeLists.txt  daq.cc  merger.cc  nulldaq.cc  nullmerger.cc  nulltcb.cc  stddaq.cc  tcb.cc  tcbdaq.cc  usbreset.cc
DAQConfig/: CMakeLists.txt
DAQConfig/DAQConfig/: AbsConf.hh  AbsConfList.hh  AmoreADCConf.hh  DAQConf.hh  FADCSConf.hh  FADCTConf.hh  GADCSConf.hh  GADCTConf.hh  IADCTConf.hh  LinkDef.h  MADCSConf.hh  RunConfig.hh  SADCSConf.hh  SADCTConf.hh  STRGConf.hh  TCBConf.hh  TriggerLookupTable.hh
DAQConfig/src/: AbsConf.cc  AbsConfList.cc  AmoreADCConf.cc  DAQConf.cc  FADCSConf.cc  FADCTConf.cc  GADCSConf.cc  GADCTConf.cc  IADCTConf.cc  MADCSConf.cc  RunConfig.cc  SADCSConf.cc  SADCTConf.cc  STRGConf.cc  TCBConf.cc  TriggerLookupTable.cc
DAQConfig/test/: CMakeLists.txt  test_tlt.cc
DAQSystem/: CMakeLists.txt
DAQSystem/DAQSystem/: AbsADC.hh  AbsTCB.hh  AmoreADC.hh  CupFADCS.hh  CupFADCT.hh  CupGADCS.hh  CupGADCT.hh  CupIADCT.hh  CupMADCS.hh  CupMiniTCB.hh  CupSADCS.hh  CupSADCT.hh  CupTCB.hh  LinkDef.h
DAQSystem/src/: AbsADC.cc  AbsTCB.cc  AmoreADC.cc  CupFADCS.cc  CupFADCT.cc  CupGADCS.cc  CupGADCT.cc  CupIADCT.cc  CupMADCS.cc  CupMiniTCB.cc  CupSADCS.cc  CupSADCT.cc  CupTCB.cc
DAQTrigger/: CMakeLists.txt
DAQTrigger/DAQTrigger/: AbsSoftTrigger.hh  CupSoftTrigger.hh  PSMDTrigger.hh  WCMDTrigger.hh
DAQTrigger/src/: AbsSoftTrigger.cc  CupSoftTrigger.cc  PSMDTrigger.cc  WCMDTrigger.cc
DAQUtils/: CMakeLists.txt
DAQUtils/DAQUtils/: ConcurrentDeque.hh  ELog.hh  ELogger.hh  Json.hh  LinkDef.h
DAQUtils/src/: ELog.cc  ELogger.cc
HDF5Utils/: CMakeLists.txt
HDF5Utils/HDF5Utils/: AbsH5Base.hh  AbsH5Event.hh  AbsH5Hit.hh  EDM.hh  H5AMOREEvent.hh  H5DataReader.hh  H5DataWriter.hh  H5Event.hh  H5FADCEvent.hh  H5FADCHit.hh  H5SADCEvent.hh  H5SADCHit.hh  LinkDef.h
HDF5Utils/src/: AbsH5Base.cc  AbsH5Event.cc  AbsH5Hit.cc  H5AMOREEvent.cc  H5DataReader.cc  H5DataWriter.cc  H5FADCEvent.cc  H5FADCHit.cc  H5SADCEvent.cc  H5SADCHit.cc
HDF5Utils/test/: CMakeLists.txt  draw_fadc.C  edge_test.cc  test_fadc_event.cc  test_fadc_hit.cc  test_sadc_event.cc  test_sadc_hit.cc  test_subrun.cc  write_amore.cc  write_fadc.cc  write_fadc_event.C  write_fadc_random_ch.cc  write_sadc.cc
NewNotice/: CMakeLists.txt
NewNotice/NewNotice/: LinkDef.h  NKAMOREADC.hh  NKFADC125S.hh  NKFADC500.hh  NKFADC500S.hh  NKIADC64.hh  NKMiniTCB.hh  NKSADC64.hh  NKTCB.hh  USB3Com.hh  USB3Tcb.hh  USBManager.hh
NewNotice/src/: NKAMOREADC.cc  NKFADC125S.cc  NKFADC500.cc  (+8 more)
NewNotice/test/: CMakeLists.txt  test_minitcb.cc  test_usb3com.cc
Notice/: CMakeLists.txt
Notice/Notice/: LinkDef.h  NKAMOREADC.hh  NKFADC125S.hh  NKFADC500.hh  NKFADC500S.hh  NKIADC64.hh  NKMiniTCB.hh  NKSADC64.hh  NKTCB.hh  NoticeAMOREADC.hh  NoticeM64ADC.hh  NoticeM64ADCS.hh  NoticeMINITCB.hh  NoticeMUONDAQ.hh  NoticeNKFADC125.hh  NoticeNKFADC125S.hh  NoticeNKFADC500.hh  NoticeNKFADC500S.hh  NoticeTCB.hh  USB3Com.hh  USB3Tcb.hh  USBManager.hh  nkusb.hh  nkusbconst.hh  usb3com.hh  usb3comroot.hh  usb3tcb.hh  usb3tcbroot.hh
Notice/src/: NKAMOREADC.cc  NKFADC125S.cc  NKFADC500.cc  NKFADC500S.cc  NKIADC64.cc  NKMiniTCB.cc  NKSADC64.cc  NKTCB.cc  NoticeAMOREADC.cc  NoticeM64ADC.cc  NoticeM64ADCS.cc  NoticeMINITCB.cc  NoticeMUONDAQ.cc  NoticeNKFADC125.cc  NoticeNKFADC125S.cc  NoticeNKFADC500.cc  NoticeNKFADC500S.cc  NoticeTCB.cc  USB3Com.cc  USB3Tcb.cc  USBManager.cc  nkusb.cc  usb3com.cc  usb3comroot.cc  usb3tcb.cc  usb3tcbroot.cc
Notice/test/: CMakeLists.txt  test_minitcb.cc  test_usb3com.cc
OnlConsts/: CMakeLists.txt
OnlConsts/OnlConsts/: adcconsts.hh  amoreconsts.hh  onlconsts.hh
OnlHistogramer/: CMakeLists.txt
OnlHistogramer/OnlHistogramer/: AbsHistogramer.hh  FADCHistogramer.hh  SADCHistogramer.hh
OnlHistogramer/src/: AbsHistogramer.cc  FADCHistogramer.cc  SADCHistogramer.cc
OnlObjs/: CMakeLists.txt
RawObjs/: CMakeLists.txt
RawObjs/RawObjs/: AChannel.hh  AChannelData.hh  AbsChannel.hh  ArrayS.hh  EventInfo.hh  FChannel.hh  FChannelData.hh  LinkDef.h
RawObjs/src/: AChannel.cc  AChannelData.cc  AbsChannel.cc  ArrayS.cc  EventInfo.cc  FChannel.cc  FChannelData.cc
RawObjs/test/: CMakeLists.txt  write_fadc_root.cc
cmake/: Config.cmake.in
(+15 files in other folders)
